--- a/StarWars5E/src/pug/npc/npc.pug
+++ b/StarWars5E/src/pug/npc/npc.pug
@@ -1,4 +1,4 @@
-.container.npc
+.container.npc(style='width: 390px;')
     input.npc_options-flag(type='checkbox', name='attr_npc_options-flag', checked='checked')
     span y
     .npc_options
